# changed

./: README.md
R/package/: DESCRIPTION  NAMESPACE
R/package/R/: cpt.normal.mean.R  cpt.normal.mean.class.R  cpt.np.average.R  cpt.np.average.class.R  cpt.np.conditional.R  cpt.np.conditional.class.R  cpt.np.max.R  cpt.np.max.class.R  quantiles.R
R/package/inst/changed/cost/normal/: normal.mean.h  sumstats.h~
R/package/inst/changed/cost/np/: np.average.h  np.conditional.h  np.conditional.h~  np.max.h
R/package/inst/changed/methods/: op.pruned.h
R/package/src/: Makevars.win  changed.module.cpp  mean.h  rcpp_module.cpp
R/package/tests/testthat/: generate.test.data.R  hyeyoung-maeng-original.R  test.R  test.data.RData
c++/core/: split.h  split.h~
c++/cost/normal/: normal_mean.h
notebooks/: Untitled1.ipynb  changes.ipynb  examples.ipynb  introduction.ipynb  package.ipynb  pelt.ipynb
python/package/: README.md  pyproject.toml
python/package/changed/core/: __init__.py  add.py  amoc.py  point_function.py  split.py
python/package/changed/cost/: __init__.py
python/package/changed/cost/normal/: __init__.py  mean.py
python/package/changed/methods/: __init__.py  amoc.py  op.py
python/package/changed/methods/sequential/: __init__.py  sop.py
python/package/changes/: __init__.py  blob.py
python/package/changes/core/: __init__.py  amoc.py  split.py
