[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "changes"
version = "0.0.1"
authors = [
  { name="Daniel Grose", email="dan.grose@lancaster.ac.uk" },
]
description = "A collection of methods for detecting changes in data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-only",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/grosed/changes"
